fix the multiple html bug!

--- a/CreditCardClientSideSolution/wwwroot/RegistrationPage.html
+++ b/CreditCardClientSideSolution/wwwroot/RegistrationPage.html
@@ -84,12 +84,16 @@
             <input type="text" class="input-box" id="Email" placeholder="Email">
             <input type="password" class="input-box" id="Password" placeholder="Password">
             <label for="birthdate" class="data-label">Enter your birth date:</label>
-            <input type="date" class="input-box-date" id="BirthDate" >
+            <input type="date" class="input-box-date" id="BirthDate">
             <input type="text" class="input-box" id="CreditCardNumber" placeholder="Credit Card Number">
             <input type="text" class="input-box" id="expiration date" placeholder="expiration date mm/yy">
             <input type="button" class="submit-button" id="submit-button" value="Submit">
-            <a href="htmlpage.html">press</a>
-            
+            <a href="LoginPage.html">LoginPage</a>
+            <a href="DashboardPage.html">DashboardPage</a>
+            <a href="MyPaymentsPage.html">MyPaymentsPage</a>
+            <a href="ActionsPage.html">ActionsPage</a>
+
+
         </div>
     </div>
     <script>
